--- a/README
+++ b/README
@@ -82,7 +82,7 @@ information.
 BUG REPORTS
 
 Bugs and comments should be reported by e-mail to
-	Bruno.Blanchet@ens.fr
+	Bruno.Blanchet@inria.fr
 
 ACKNOWLEDGMENTS
 
