--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -44,7 +44,7 @@ Cryptographic Protocol Verifier\\
 User Manual}
 
 \author{Bruno Blanchet and David Cad{\'e}\\
-{\'E}cole Normale Supérieure, CNRS, INRIA, Paris}
+INRIA Paris-Rocquencourt, France}
 
 \maketitle
 
@@ -57,7 +57,7 @@ papers~\cite{Blanchet06,BlanchetEPrint05,Blanchet06b,BlanchetPointchevalEPrint06
 that can be downloaded at
 
 \centerline{{\tt
-http://www.di.ens.fr/\string~blanchet/publications.html}.}
+http://prosecco.gforge.inria.fr/personal/bblanche/publications/index.html}.}
 
 The goal of our protocol verifier is to prove security properties
 of protocols in the computational model. The input file describes
@@ -1260,6 +1260,12 @@ $\texttt{!}N$&$!^N$\\
 
 \section{Implementation}
 \input {impl.tex}
+
+
+
+\section*{Acknowledgments}
+
+CryptoVerif was partly developed while the authors were at \'Ecole Normale Sup\'erieure, Paris.
 
 \bibliography{../../allbib/biblio}
 \bibliographystyle{abbrv} %alpha
