channels can be only names in the initial game

--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,7 @@ Version
 - improved explanation of probability computations
 - cleaned up the semantics of "find", by using temporary variables for
 the lookup.
-- channels must be identifiers only in the initial game; indices of channels
+- channels must be identifiers in the initial game; indices of channels
 are always implicitly the current replication indices.
 - allow approximately uniform distributions for finite sets (bounded types),
 and non-uniform distributions for all typs (all random elements chosen by 
