--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1121,6 +1121,10 @@ Otherwise, wait for further instructions.
 \item \texttt{show\string_state}: display the whole sequence
 of games until the current game.
 
+\item $\texttt{show\string_facts}\ occ$: show that facts that are proved
+by CryptoVerif in the current game, at the program point of occurrence $occ$. 
+This command is mainly helpful for debugging.
+
 \item \texttt{auto}: switch to automatic mode; try to
 terminate the proof automatically from the current game.
 
